src/pages/feedbacks/ListPage/style.scss
@use "sass:map";
@use "@/sass/abstract" as *;

.list-page {
  &__main--mobile {
    padding-top: 72px;
  }
  &__feedbacks {
    position: relative;
    min-height: 50vh;
  }
  &__spinner {
    position: absolute;
    left: 50vh;
    top: 25vh;
    transform: translate(-50%, 0);
    z-index: 999;
  }
  @include md {
    margin: 0 map.get($content-margin, "tablet");
    /************ navigation layout for tablet *************/
    &__nav {
      margin-bottom: 40px;
    }
    &__nav-items {
      align-items: stretch;
      display: flex;
      gap: 10px;
    }
    &__nav-item {
      width: 33.3333%;
      & > * {
        height: 100%;
      }
    }
  }

  @include lg {
    max-width: 82vw;
    margin: 0 auto;
    position: relative;
    display: flex;

    &__nav {
      position: sticky;
      left: 0;
      top: 0;
      width: 255px;
      height: 100vh;
    }
    &__nav-items {
      flex-direction: column;
      gap: 24px;
    }
    &__nav-item {
      width: 100%;
    }

    &__main {
      width: calc(100% - 285px); // add 30px gap
      margin-left: 30px;
    }
  }

  @include xl {
    max-width: 86vw;
  }

  @include xlg {
    width: map.get($grid-breakpoints, "xl");
  }
}

